update interface in swagger.json, improve husky precommit hook, add return type
